--- a/style.css
+++ b/style.css
@@ -37,13 +37,13 @@ img {
 }
  
 h1 {
-  font-family: "Monaco", cursive;
+  font-family: Monaco, cursive;
   font-size: 64px;
   color: #8b1b00;
 }
  
 p, li {
-  font-family: "Brush Script MT", sans-serif;
+  font-family: Brush Script MT, sans-serif;
   font-size: 22px;
   color: #51473b;
 }
